2010-12-31  Thomas Koenig  <tkoenig@gcc.gnu.org>

PR fortran/45338
	* resolve.c (resolve_operator):  Mark function for user-defined
	operator as referenced.

2010-12-31  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/45338
	* gfortran.dg/userdef_operator_2.f90:  New test case.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@168366 138bc75d-0d04-0410-961f-82ee72b054a4